experiment_output/error_log/nondex-caio-grpc-java-gradle-hello-world.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task337/wd/NonDex-plugin-test/github.com/caio/grpc-java-gradle-hello-world/src/generated/main/grpc/io/github/caio/grpc/GreeterGrpc.java:23: error: cannot find symbol
@javax.annotation.Generated(
                 ^
  symbol:   class Generated
  location: package javax.annotation
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task337/wd/NonDex-plugin-test/github.com/caio/grpc-java-gradle-hello-world/src/main/java/io/github/caio/grpc/HelloWorldClient.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 7s
